welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:3: error: not found: value appartient
	if (appartient1319(a) || appartient(b) || appartient(c)) return true;
                                 ^